--- a/03.v-if.html
+++ b/03.v-if.html
@@ -4,10 +4,15 @@
 <head>
     <title>Hello in VueJs.</title>
 </head>
+<!-- 
+    v-if works when condition is true
+    we can also provide v-else for else.
+-->
 
 <body>
     <div id="root">
-        <p>{{ name }}</p>
+        <p v-if="heading">{{ name }}</p>
+        <p v-else>Above v-if condition is not true.</p>
     </div>
 </body>
 
@@ -18,6 +23,7 @@
         el: "#root",
         data: {
             name: "Hello VueJS",
+            heading: false,
         }
     });
 </script>
